fixes dark mode img

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,7 +23,8 @@
   position: absolute;
   flex-direction: column;
   justify-content: center; align-items: center;
-  width: 30%;
+  width: 83%;
+  max-width: 30rem;
   perspective: 10rem;
   z-index: 99;
 }
@@ -183,7 +184,7 @@
   .homeHeader {
     right: 0;
     font-family: 'Lato', sans-serif;
-    font-size: 12.5em; font-weight: 900;
+    font-size: 10.5em; font-weight: 900;
     color: var(--fnt-main);
     margin-top: 6rem;
   }
